# katana

./: .gitignore  .gitmodules  .tool-versions  AGENT.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  account-file.json  rustfmt.toml  snfoundry.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: Dockerfile
.github/workflows/: bench.yml  binary-size.yml  build-and-push-docker.yml  ci.yml  claude-code-review.yml  claude.yml  generate-db-dispatch.yml  release-dispatch.yml  release.yml  test.yml
contracts/messaging/solidity/: .gitignore
contracts/misc/src/: lib.cairo
crates/cairo/: Cargo.toml
crates/chain-spec/: Cargo.toml
crates/chain-spec/src/: dev.rs
crates/chain-spec/src/rollup/: mod.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  file.rs  options.rs  utils.rs
crates/contracts/: .gitignore
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs
crates/core/src/backend/: gas_oracle.rs  mod.rs  storage.rs
crates/core/src/service/: block_producer.rs  block_producer_tests.rs  metrics.rs
crates/core/tests/: backend.rs
crates/executor/: Cargo.toml  README.md  cairo-native.env.sh
crates/executor/benches/: concurrent.rs  execution.rs  utils.rs
crates/executor/src/: utils.rs
crates/executor/src/abstraction/: executor.rs  mod.rs
crates/executor/src/implementation/: mod.rs  noop.rs
crates/executor/src/implementation/blockifier/: cache.rs  call.rs  mod.rs  state.rs  utils.rs
crates/executor/tests/: executor.rs  simulate.rs
crates/executor/tests/fixtures/: call_test.json  contract.json  mod.rs  transaction.rs
crates/explorer/: Cargo.toml  README.md  build.rs
crates/explorer/src/: lib.rs
crates/feeder-gateway/src/: client.rs
crates/feeder-gateway/src/types/: mod.rs  receipt.rs  serde_utils.rs  transaction.rs
crates/grpc/: Cargo.toml
crates/log/: Cargo.toml
crates/log/src/: fmt.rs  gcloud.rs  lib.rs  otel.rs  otlp.rs
crates/messaging/src/: ethereum.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  process.rs  server.rs
crates/metrics/src/sys/: disk.rs  mod.rs  process.rs
crates/node/: Cargo.toml
crates/node-bindings/src/: lib.rs
crates/node/src/: exit.rs  lib.rs
crates/node/src/config/: dev.rs  execution.rs  mod.rs  paymaster.rs  rpc.rs  sequencing.rs
crates/node/src/full/: mod.rs
crates/pool/: Cargo.toml
crates/pool/src/: ordering.rs  pool.rs  tx.rs
crates/pool/src/validation/: error.rs  stateful.rs
crates/primitives/: Cargo.toml
crates/primitives/benches/: class.rs
crates/primitives/src/: block.rs  class.rs  contract.rs  env.rs  event.rs  execution.rs  fee.rs  lib.rs  receipt.rs  state.rs  trace.rs  transaction.rs
crates/primitives/src/conversion/: rpc.rs
crates/primitives/src/genesis/: constant.rs  json.rs  mod.rs  test-genesis-with-class.json  test-genesis-with-duplicate-name.json  test-genesis.json
crates/primitives/src/utils/: class.rs  transaction.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: cartridge.rs  lib.rs
crates/rpc/rpc-api/src/error/: dev.rs  katana.rs  mod.rs  starknet.rs
crates/rpc/rpc-types/: Cargo.toml
crates/rpc/rpc-types-builder/src/: state_update.rs
crates/rpc/rpc-types/src/: block.rs  class.rs  lib.rs  outside_execution.rs  receipt.rs  trace.rs  transaction.rs  utils.rs
crates/rpc/rpc/proptest-regressions/starknet/: forking.txt
crates/rpc/rpc/src/: cartridge.rs  cors.rs  dev.rs  health.rs  lib.rs  logger.rs  metrics.rs  permit.rs
crates/rpc/rpc/src/cartridge/: mod.rs  vrf.rs
crates/rpc/rpc/src/starknet/: blockifier.rs  config.rs  forking.rs  mod.rs  permit.rs  read.rs  trace.rs  write.rs
crates/rpc/rpc/src/utils/: events.rs
crates/rpc/rpc/tests/: dev.rs  estimate_fee_rate_limit.rs  forking.rs  messaging.rs  proofs.rs  saya.rs  simulate.rs  starknet.rs  torii.rs
crates/rpc/rpc/tests/common/: mod.rs
crates/rpc/rpc/tests/test_data/: erc20.json  test_sierra_contract.json
crates/runner/: Cargo.toml
crates/runner/src/: dev.rs  lib.rs  utils.rs
crates/storage/db/: Cargo.toml
crates/storage/db/benches/: codec.rs
crates/storage/db/benches/fixtures/: dojo_world_240.json
crates/storage/db/src/: error.rs  lib.rs  tables.rs  version.rs
crates/storage/db/src/abstraction/: cursor.rs  transaction.rs
crates/storage/db/src/codecs/: mod.rs  postcard.rs
crates/storage/db/src/mdbx/: cursor.rs  mod.rs  tx.rs
crates/storage/db/src/models/: class.rs  contract.rs  list.rs  mod.rs  storage.rs  trie.rs
crates/storage/db/src/models/versioned/block/: mod.rs  v6.rs
crates/storage/db/src/models/versioned/transaction/: mod.rs  v6.rs
crates/storage/db/src/trie/: mod.rs  snapshot.rs
crates/storage/fork/: Cargo.toml
crates/storage/fork/src/: lib.rs
crates/storage/provider/: Cargo.toml
crates/storage/provider/src/: error.rs  lib.rs
crates/storage/provider/src/providers/: mod.rs
crates/storage/provider/src/providers/db/: mod.rs  state.rs  trie.rs
crates/storage/provider/src/providers/fork/: mod.rs  state.rs  trie.rs
crates/storage/provider/src/providers/in_memory/: cache.rs  mod.rs  state.rs
crates/storage/provider/src/traits/: block.rs  contract.rs  state.rs  transaction.rs  trie.rs
crates/storage/provider/tests/: block.rs  class.rs  contract.rs  fixtures.rs  storage.rs  utils.rs
crates/sync/stage/: Cargo.toml
crates/sync/stage/src/: blocks.rs  classes.rs
crates/tasks/src/: lib.rs  manager.rs  task.rs
crates/trie/: Cargo.toml
crates/trie/src/: classes.rs  contracts.rs  lib.rs  storages.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  node.rs  tx_waiter.rs
monitoring/grafana/dashboards/: overview.json
scripts/: cairo-native.env.sh  clippy.sh  generate-binary-size-report.sh  generate-test-db.sh  rust_fmt.sh
tests/db-compat/: Cargo.toml
tests/db-compat/src/: main.rs
tests/fixtures/: Caddyfile
tests/fixtures/test-chain/: config.toml
tests/reverse-proxy/: Cargo.toml
tests/reverse-proxy/src/: main.rs
tests/snos/: Cargo.toml
tests/snos/src/: main.rs
