[package]
edition.workspace = true
license.workspace = true
name = "katana-cli"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-log.workspace = true
katana-messaging.workspace = true
katana-node.workspace = true
katana-primitives.workspace = true
katana-rpc.workspace = true
katana-slot-controller = { workspace = true, optional = true }

alloy-primitives.workspace = true
anyhow.workspace = true
clap.workspace = true
console.workspace = true
dojo-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand = "3.1.0"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
starknet.workspace = true

[features]
cartridge = [
	"dep:katana-slot-controller",
	"katana-node/cartridge",
	"katana-rpc/cartridge",
]
default = [ "cartridge", "server" ]
native = [ "katana-node/native" ]
server = [  ]
