[package]
edition.workspace = true
name = "katana-slot-controller"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Controller PR revision until merged.
# https://github.com/cartridge-gg/controller/pull/1454
account_sdk = { git = "https://github.com/cartridge-gg/controller", rev = "dbbe0353d64de743739d425f8aab91ca3ac0e16f" }
katana-primitives.workspace = true
