[package]
description = "Katana execution engine. This crate provides abstractions and implementations for transaction execution."
edition.workspace = true
name = "katana-executor"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-primitives.workspace = true
katana-provider.workspace = true

blockifier = { workspace = true, features = [ "testing" ] }
quick_cache = "0.6.10"
starknet.workspace = true
thiserror.workspace = true
tracing.workspace = true

# cairo-native
cairo-native = { version = "0.4.1", optional = true }
cairo-vm.workspace = true
parking_lot.workspace = true
rayon = { workspace = true, optional = true }
starknet_api.workspace = true

[dev-dependencies]
katana-chain-spec.workspace = true
katana-provider = { workspace = true, features = [ "test-utils" ] }
katana-rpc-types.workspace = true

alloy-primitives.workspace = true
anyhow.workspace = true
assert_matches.workspace = true
num-traits.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
tokio.workspace = true

criterion.workspace = true
oneshot = { version = "0.1.8", default-features = false, features = [ "std" ] }
pprof.workspace = true
rayon.workspace = true

[features]
native = [ "blockifier/cairo_native", "dep:cairo-native", "dep:rayon" ]

[[bench]]
harness = false
name = "execution"
