[package]
edition.workspace = true
license-file.workspace = true
name = "katana-explorer"
repository.workspace = true
version.workspace = true

[dependencies]
katana-tasks.workspace = true

anyhow.workspace = true
axum = "0.6.20"
http.workspace = true
jsonrpsee = { workspace = true, features = [ "server" ], optional = true }
rust-embed = "6.8.1"
tiny_http = "0.12"
tokio = { workspace = true, features = [ "full" ] }
tower.workspace = true
tower-http = { workspace = true, features = [ "cors" ] }
tracing.workspace = true
url.workspace = true
urlencoding = "2.1.2"

[dev-dependencies]
katana-runner.workspace = true
reqwest.workspace = true
