[package]
edition.workspace = true
license.workspace = true
name = "katana-log"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
