[package]
edition.workspace = true
license.workspace = true
name = "katana-utils"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-executor.workspace = true
katana-node = { workspace = true, features = [ "explorer" ] }
katana-primitives.workspace = true
katana-provider.workspace = true

anyhow.workspace = true
assert_matches.workspace = true
futures.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "time" ] }
