[package]
description = "Katana RPC APIs"
edition.workspace = true
name = "katana-rpc-api"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-core.workspace = true
katana-pool.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-types.workspace = true

anyhow.workspace = true
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true

[features]
client = [ "jsonrpsee/client" ]
