[package]
description = "Types used in Katana RPC layer."
edition.workspace = true
name = "katana-rpc-types"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katana-primitives.workspace = true
katana-trie.workspace = true

anyhow.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-utils.workspace = true
derive_more.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet.workspace = true
starknet_api.workspace = true
thiserror.workspace = true

alloy-primitives.workspace = true
flate2.workspace = true
serde_json_pythonic = "0.1.2"

[dev-dependencies]
rstest.workspace = true
similar-asserts.workspace = true
