[package]
description = "Katana RPC Implementation."
edition.workspace = true
license-file.workspace = true
name = "katana-rpc"
repository.workspace = true
version.workspace = true

[dependencies]
katana-core.workspace = true
katana-executor.workspace = true
katana-explorer = { workspace = true, features = [ "jsonrpsee" ] }
katana-pool.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-api.workspace = true
katana-rpc-types.workspace = true
katana-rpc-types-builder.workspace = true
katana-tasks.workspace = true
katana-metrics.workspace = true

anyhow.workspace = true
futures.workspace = true
http.workspace = true
jsonrpsee = { workspace = true, features = [ "server" ] }
reqwest = { workspace = true, optional = true }
metrics.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
cainome = { workspace = true, optional = true }
account_sdk = { workspace = true, optional = true }

[dev-dependencies]
katana-chain-spec.workspace = true
katana-messaging.workspace = true
katana-node.workspace = true
katana-rpc-api = { workspace = true, features = [ "client" ] }
katana-trie.workspace = true
katana-utils.workspace = true
katana-db.workspace = true

# Remove git alloy and use workspace dependencies instead
alloy-contract.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
# alloy = { git = "https://github.com/alloy-rs/alloy", features = [ "contract", "network", "node-bindings", "provider-http", "providers", "signer-local" ] }
alloy-primitives = { workspace = true, features = [ "serde" ] }
assert_matches.workspace = true
cainome.workspace = true
cairo-lang-starknet-classes.workspace = true
dojo-utils.workspace = true
indexmap.workspace = true
jsonrpsee = { workspace = true, features = [ "client" ] }
num-traits.workspace = true
rand.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true
tokio.workspace = true

[features]
cartridge = [ "katana-rpc-api/cartridge", "dep:reqwest", "dep:cainome", "dep:account_sdk", "dep:serde" ]
