[package]
description = "Katana RPC Implementation."
edition.workspace = true
license-file.workspace = true
name = "katana-rpc"
repository.workspace = true
version.workspace = true

[dependencies]
katana-core.workspace = true
katana-executor.workspace = true
katana-explorer = { workspace = true, features = [ "jsonrpsee" ], optional = true }
katana-log.workspace = true
katana-metrics.workspace = true
katana-pool.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-api.workspace = true
katana-rpc-types.workspace = true
katana-rpc-types-builder.workspace = true
katana-tasks.workspace = true

anyhow.workspace = true
futures.workspace = true
http.workspace = true
jsonrpsee = { workspace = true, features = [ "server", "client" ] }
metrics.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = [ "trace", "cors" ] }
tracing.workspace = true
url.workspace = true

ark-ec = { version = "0.4.2", optional = true }
cainome = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
starknet-crypto = { workspace = true, optional = true }
# Use a specific revision of stark-vrf to avoid unwanted breaking changes.
stark-vrf = { git = "https://github.com/dojoengine/stark-vrf.git", rev = "96d6d2a", optional = true }

[dev-dependencies]
katana-chain-spec.workspace = true
katana-messaging.workspace = true
katana-node.workspace = true
katana-rpc-api = { workspace = true, features = [ "client" ] }
katana-trie.workspace = true
katana-utils.workspace = true
katana-db.workspace = true
katana-runner.workspace = true

# Remove git alloy and use workspace dependencies instead
alloy-contract.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
# alloy = { git = "https://github.com/alloy-rs/alloy", features = [ "contract", "network", "node-bindings", "provider-http", "providers", "signer-local" ] }
alloy-primitives = { workspace = true, features = [ "serde" ] }
assert_matches.workspace = true
cainome.workspace = true
cairo-lang-starknet-classes.workspace = true
dojo-utils.workspace = true
indexmap.workspace = true
jsonrpsee = { workspace = true, features = [ "client" ] }
num-traits.workspace = true
rand.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true
tokio.workspace = true
proptest = "1.7.0"

[features]
cartridge = [
	"dep:ark-ec",
	"dep:cainome",
	"dep:num-bigint",
	"dep:parking_lot",
	"dep:reqwest",
	"dep:serde",
	"dep:stark-vrf",
	"dep:starknet-crypto",
	"katana-rpc-api/cartridge",
]
explorer = [ "dep:katana-explorer" ]
client = [ "jsonrpsee/client", "katana-rpc-api/client" ]
