[package]
edition.workspace = true
license.workspace = true
name = "katana-fork"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true
katana-rpc-types.workspace = true
katana-tasks.workspace = true

anyhow.workspace = true
futures.workspace = true
parking_lot.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
url.workspace = true
